--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -75,9 +75,9 @@ jobs:
         export ASEPRITE=$PWD/build/bin/aseprite
         cd tests
         $XVFB bash run-tests.sh
-     - uses: actions/upload-artifact@v3
-       with:
+    - uses: actions/upload-artifact@v3
+      with: 
         name: aseprite
         path: |
-          C:/a/aseprite/aseprite/build/bin/data
-          C:/a/aseprite/aseprite/build/bin/aseprite.exe
+          D:/a/aseprite/aseprite/build/bin/data
+          D:/a/aseprite/aseprite/build/bin/aseprite.exe 
