--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -7,8 +7,8 @@ jobs:
       fail-fast: false
       matrix:
         os: [windows-latest]
-        build_type: [RelWithDebInfo, Debug]
-        enable_ui: [off]
+        build_type: [Realse]
+        enable_ui: [on]
         include:
           - os: ubuntu-latest
             build_type: Realse
